@@ -10,6 +10,8 @@
   - SPVM::StringList->new can receive undef.
   - SPVM::List->new can receive undef.
   - SPVM::Hash->new can receive undef.
+  - remove SPVM::StringBuffer->index
+  - remove SPVM::StringBuffer->substr
 0.0948 2021-04-28
   - remove SPVM::StringUtil->replace
   - remove SPVM::StringUtil->replace_all
